--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- NAVBAR -->
 <nav class="navbar">
     <div class="container nav-flex">
-        <h2 class="logo">Mythili</h2>
+        <h2 class="logo"></h2>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
@@ -96,3 +96,4 @@
 
 </body>
 </html>
+
