--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="card">
         <h3>Education</h3>
         <p><strong>V.S.B Engineering College</strong><br>B.E ECE – CGPA 8.32<br><small>2020 – 2024</small></p>
-        <p><strong>Star Matric Higher Secondary</strong><br>12th – 75% | 10th – 88%</p>
+        <p><strong>Star Matric Higher Secondary School</strong><br>12th – 75% | 10th – 88%</p>
     </div>
 </section>
 
@@ -96,4 +96,5 @@
 
 </body>
 </html>
+
 
