--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="mailto:mythilim889@gmail.com" class="hire-btn">Contact</a></li>
+            <li><a href="mailto:myithilisakthivel@gmail.com" class="hire-btn">Contact</a></li>
         </ul>
     </div>
 </nav>
@@ -90,11 +90,12 @@
 </main>
 
 <footer class="footer">
-    <p>Email: mythilim889@gmail.com</p>
+    <p>Email: myithilisakthivel@gmail.com</p>
     <p>© 2026 Mythili S</p>
 </footer>
 
 </body>
 </html>
+
 
 
